--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -74,6 +74,15 @@
     "John Doe\n",
     "\n",
     "3. Press **Shift + Enter** to render the Markdown."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "246a6dd9",
+   "metadata": {},
+   "source": [
+    "# Code to print your name\n",
+    "print(\"John Doe\")  \n"
    ]
   },
   {
@@ -159,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
