--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -59,6 +59,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2df20356",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Harsha TS!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello, Harsha TS!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8f4c436c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, Harsha TS!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello, Harsha TS!')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "59d7f0ea",
    "metadata": {},
@@ -83,6 +119,24 @@
    "source": [
     "# Code to print your name\n",
     "print(\"John Doe\")  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "50771fc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOhn Doe\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"JOhn Doe\")"
    ]
   },
   {
@@ -125,6 +179,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9baf4a27",
+   "metadata": {},
+   "source": [
+    "# JupyterLab Shortcuts\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a9f2188",
    "metadata": {},
    "source": [
@@ -154,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -168,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
